--- a/src/mainframe.fxml
+++ b/src/mainframe.fxml
@@ -8,13 +8,13 @@
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
-<SplitPane dividerPositions="0.4280936454849498" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns:fx="http://javafx.com/fxml/1" xmlns="http://javafx.com/javafx/17" fx:controller="Controller">
+<SplitPane dividerPositions="0.4280936454849498" maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="400.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1" fx:controller="Controller">
   <items>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
          <children>
             <TextField fx:id="inputName" layoutX="52.0" layoutY="48.0" />
             <TextField fx:id="inputSurname" layoutX="52.0" layoutY="122.0" />
-            <Button layoutX="90.0" layoutY="234.0" mnemonicParsing="false" onAction="#add" prefHeight="41.0" prefWidth="73.0" text="Add" />
+            <Button layoutX="90.0" layoutY="190.0" mnemonicParsing="false" onAction="#add" prefHeight="41.0" prefWidth="73.0" text="Add" />
             <Text layoutX="52.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" />
             <Text layoutX="52.0" layoutY="118.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Surname" />
          </children></AnchorPane>
@@ -26,6 +26,7 @@
                 <TableColumn fx:id="surname" prefWidth="75.0" text="Surname" />
               </columns>
             </TableView>
+            <Button layoutX="70.0" layoutY="23.0" mnemonicParsing="false" onAction="#clearAll" text="ClearAll" />
          </children></AnchorPane>
   </items>
 </SplitPane>
