--- a/src/mainframe.fxml
+++ b/src/mainframe.fxml
@@ -5,6 +5,7 @@
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
 <?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.ToolBar?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.text.Text?>
 
@@ -12,21 +13,27 @@
   <items>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
          <children>
-            <TextField fx:id="inputName" layoutX="52.0" layoutY="48.0" />
-            <TextField fx:id="inputSurname" layoutX="52.0" layoutY="122.0" />
-            <Button layoutX="90.0" layoutY="190.0" mnemonicParsing="false" onAction="#add" prefHeight="41.0" prefWidth="73.0" text="Add" />
+            <TextField fx:id="inputName" layoutX="52.0" layoutY="48.0" AnchorPane.bottomAnchor="325.0" AnchorPane.leftAnchor="52.0" AnchorPane.rightAnchor="52.0" AnchorPane.topAnchor="48.0" />
+            <TextField fx:id="inputSurname" layoutX="52.0" layoutY="122.0" AnchorPane.bottomAnchor="251.0" AnchorPane.leftAnchor="52.0" AnchorPane.rightAnchor="52.0" AnchorPane.topAnchor="122.0" />
+            <Button layoutX="90.0" layoutY="190.0" mnemonicParsing="false" onAction="#add" prefHeight="41.0" prefWidth="73.0" text="Add" AnchorPane.bottomAnchor="167.0" AnchorPane.leftAnchor="90.0" AnchorPane.rightAnchor="90.0" AnchorPane.topAnchor="190.0" />
             <Text layoutX="52.0" layoutY="44.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Name" />
-            <Text layoutX="52.0" layoutY="118.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Surname" />
+            <Text layoutX="52.0" layoutY="118.0" strokeType="OUTSIDE" strokeWidth="0.0" text="Surname" AnchorPane.bottomAnchor="276.98828125" AnchorPane.leftAnchor="52.0" AnchorPane.rightAnchor="154.154296875" AnchorPane.topAnchor="105.05078125" />
          </children></AnchorPane>
     <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="160.0" prefWidth="100.0">
          <children>
-            <TableView fx:id="table" layoutX="70.0" layoutY="73.0" prefHeight="279.0" prefWidth="229.0">
+            <TableView fx:id="table" layoutX="70.0" layoutY="73.0" prefHeight="279.0" prefWidth="229.0" AnchorPane.bottomAnchor="46.0" AnchorPane.leftAnchor="70.0" AnchorPane.rightAnchor="40.0" AnchorPane.topAnchor="73.0">
               <columns>
                 <TableColumn fx:id="name" prefWidth="75.0" text="Name" />
                 <TableColumn fx:id="surname" prefWidth="75.0" text="Surname" />
               </columns>
             </TableView>
-            <Button layoutX="70.0" layoutY="23.0" mnemonicParsing="false" onAction="#clearAll" text="ClearAll" />
+            <ToolBar layoutX="34.0" layoutY="30.0">
+              <items>
+                <Button mnemonicParsing="false" onAction="#deleteSelected" text="Delete Selected" textAlignment="CENTER" />
+                  <Button mnemonicParsing="false" onAction="#editSelected" text="Edit Selected" textAlignment="CENTER" />
+                  <Button mnemonicParsing="false" onAction="#clearAll" prefWidth="89.0" text="Delete All" textAlignment="CENTER" />
+              </items>
+            </ToolBar>
          </children></AnchorPane>
   </items>
 </SplitPane>
